# AimTux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Fuzion.cbp  LICENSE  README.md  aimtux.sh  antiaim.cpp  atgui.cpp  build  build-debug  build_names  clean  debug  dep-install  format  gdb  gdb.sh  index.html  inline.d41d8cd98f00b204e980.bundle.map  inline.js  inline.map  launcher  load  main.2982d17cd9459d9c1236.bundle.js  main.80b16e8631b6c3259382.bundle.js  main.bundle.js  main.e2e30871d891d3b501da.bundle.js  main.e75a68535bc40af16c36.bundle.js  main.map  makefile  media.html  preload  rload  settings.h  styles.bundle.js  styles.fd9957b9bf3cd6f09fe8.bundle.js  styles.fd9957b9bf3cd6f09fe8.bundle.map  (+6 more)
.github/: ISSUE_TEMPLATE.md
assets/css/: ie8.css  ie9.css  main.css
assets/js/: main.js
assets/sass/: ie8.scss  ie9.scss  main.scss
assets/sass/libs/: _vars.scss
chameleon/: SDK.h
pkg/: PKGBUILD  aimtux-load  aimtux-uload  supreme-load  supreme-uload
src/: AimTux.cpp  Chameleon.cc  EventListener.cpp  EventListener.h  Fuzion.cpp  Fuzion.h  GhConfig.cpp  GhConfig.h  NetVarManager.cpp  NetVarManager.h  Offsets.cpp  Offsets.h  SDK.h  Weapons.h  aimbot.cpp  aimbot.h  airstuck.cpp  airstuck.h  antiaim.cpp  antiaim.h  asuswalls.cpp  asuswalls.h  atgui.cpp  atgui.h  atguielements.cpp  autoaccept.cpp  autoaccept.h  autoblock.cpp  autoblock.h  autodefuse.h  autostrafe.cpp  autostrafe.h  autowall.cpp  autowall.h  bhop.cpp  bhop.h  bone.h  chams.cpp  chams.h  chantagchanger.cpp  (+95 more)
src/ATGUI/: SegoeUI.h  atgui.cpp  atgui.h  atguielements.cpp  imgui.h  texture.h
src/ATGUI/Tabs/: aimbottab.cpp  aimbottab.h  hvhtab.cpp  hvhtab.h  misctab.cpp  misctab.h  modelstab.cpp  modelstab.h  skinstab.cpp  skinstab.h  triggerbottab.cpp  triggerbottab.h  visualstab.cpp  visualstab.h
src/ATGUI/Windows/: colors.cpp  colors.h  configs.cpp  configs.h  main.cpp  main.h  playerlist.cpp  playerlist.h  skinmodelchanger.cpp  skinmodelchanger.h  walk.cpp  walk.h
src/GUI/: gui.cpp  gui.h  main.xml
src/Hacks/: AntiAims  aimbot.cpp  aimbot.h  aimbot.h.orig  airstuck.cpp  airstuck.h  angleindicator.cpp  angleindicator.h  antiaim.cpp  antiaim.h  asuswalls.cpp  asuswalls.h  autoaccept.cpp  autoaccept.h  autoblock.cpp  autoblock.h  autodefuse.cpp  autodefuse.h  autoknife.cpp  autoknife.h  autostrafe.cpp  autostrafe.h  autowall.cpp  autowall.h  bhop.cpp  bhop.h  chams.cpp  chams.h  clantagchanger.cpp  clantagchanger.h  customglow.cpp  customglow.h  disablepostprocessing.cpp  disablepostprocessing.h  dlights.cpp  dlights.h  edgejump.cpp  edgejump.h  esp.cpp  esp.h  (+69 more)
src/Hooks/: BeginFrame.cpp  CreateMove.cpp  CreatePanel.cpp  DispatchEvent.cpp  DrawModelExecute.cpp  EmitSound.cpp  FireEvent.cpp  FireEventClientSide.cpp  FrameStageNotify.cpp  GetViewModelFOV.cpp  HandleSDLInput.cpp  IN_KeyEvent.cpp  LevelInitPostEntity.cpp  OnScreenSizeChanged.cpp  OverrideConfig.cpp  OverrideView.cpp  Paint.cpp  PaintTraverse.cpp  PlaySound.cpp  PumpWindowsMessageLoop.cpp  RenderSmokePostViewmodel.cpp  RenderSmokePreViewmodel.cpp  RenderView.cpp  RunScript.cpp  SetKeyCodeState.cpp  SetMouseCodeState.cpp  ShouldDrawCrosshair.cpp  hooks.h
src/ImGUI/: imconfig.h  imgui.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/ImGUI/examples/libs/gl3w/GL/: gl3w.c
src/ImGUI/fonts/: RobotoMonoRegular.h
src/PANELS/: .hvh_panel.cpp.swo  .hvh_panel.cpp.swp  aimbot_panel.cpp  aimbot_panel.h  aimbot_window.cpp  aimbot_window.h  config_panel.cpp  config_panel.h  esp_panel.cpp  esp_panel.h  esp_window.cpp  esp_window.h  hvh_panel.cpp  hvh_panel.h  hvh_window.h  knifechanger_panel.cpp  knifechanger_panel.h  knifeskin_panel.cpp  knifeskin_panel.h  misc_panel.cpp  misc_panel.h  misc_window.h  skinchange_panel.cpp  skinchange_panel.h  skinchanger_panel.cpp  skinchanger_panel.h  triggerbot_panel.cpp  triggerbot_panel.h  triggerbot_window.cpp  triggerbot_window.h  visuals_panel.cpp  visuals_panel.h  weaponskin_panel.cpp  weaponskin_panel.h
src/SDK/: CBaseClient.h  CBaseClientState.h  CCSGOAnimState.h  CCSGameRules.h  CEffects.h  CGameRules.h  CGameServer.h  CGlobalVars.h  CGlowObjectManager.h  CInput.h  CItemSystem.h  CPlayerResource.h  CUtlMemory.h  CUtlVector.h  CViewRender.h  HLClient.h  IAppSystem.h  IBaseClientDLL.h  IClientEntity.h  IClientEntityList.h  IClientMode.h  ICommandLine.h  ICvar.h  IEngineClient.h  IEngineSound.h  IEngineTrace.h  IEngineVGui.h  IFileSystem.h  IGameEvent.h  IGameMovement.h  IGameTypes.h  IInputSystem.h  ILauncherMgr.h  ILocalize.h  IMaterial.h  IMaterialSystem.h  INetChannel.h  IPhysicsSurfaceProps.h  IPrediction.h  ISurface.h  (+13 more)
src/SDK/Valve/tier1/: netadr.h  utldelegateimpl.h
src/SDK/panorama/: IUIEvent.h  IUIPanel.h  PanoramaUIEngine.h  types.h
src/SDK/steam/: fuzion.txt  steam_api.json
src/UI/: banner.h  button.h  combobox.h  component.cpp  component.h  cursor.cpp  cursor.h  keybind.h  listbox.h  panel.cpp  panel.h  scrollinglistbox.h  slider.cpp  slider.h  stdui.h  strptextbox.h  tabselector.cpp  tabselector.h  textbox.h  toggle.h  ui_container.cpp  ui_container.h  window.cpp  window.h
src/Utils/: MemoryProtection.cpp  MemoryProtection.h  bonemaps.cpp  bonemaps.h  draw.cpp  draw.h  entity.cpp  entity.h  math.cpp  math.h  netvarmanager.cpp  netvarmanager.h  patternfinder.cpp  patternfinder.h  pstring.h  recvproxyhook.h  skins.cpp  skins.h  util.cpp  util.h  util_items.cpp  util_items.h  util_sdk.cpp  util_sdk.h  vmt.h  xorstring.h
src/WINDOWS/: aimbot_window.cpp  aimbot_window.h  config_window.cpp  config_window.h  esp_window.cpp  esp_window.h  hvh_window.cpp  hvh_window.h  main_window.cpp  main_window.h  menu_window.cpp  menu_window.h  misc_window.cpp  misc_window.h  popup_window.cpp  popup_window.h  skinchange_window.cpp  skinchange_window.h  triggerbot_window.cpp  triggerbot_window.h
src/json/: json-forwards.h  json.h  jsoncpp.cpp
tools/: parse_weapons_data.py  update_interfaces.sh
